# BET

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: sports-ev-alert.yml
data/: sample_history.csv  sample_odds.json
docs/: app.js  index.html  styles.css
docs/data/: latest.json
scripts/: run-agent.ps1
src/evbetting_agent/: __init__.py  alerts.py  cli.py  config.py  dashboard.py  email_delivery.py  env.py  ev.py  history.py  models.py  odds_api.py  probability.py  state.py
tests/: test_ev_math.py
