[project]
name = "evbetting-agent"
version = "0.1.0"
description = "Positive-EV sports betting scanner with odds ingestion, probability estimates, and alert gating."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
